--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,13 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
-  border: 1px solid red;
 }
 
 html {
+  height: -webkit-fill-available;
   font-size: 62.5%; /*Equivalent to 10px*/
   scroll-behavior: smooth;
+  border: 1px solid red;
 }
 
 body {
@@ -20,4 +21,5 @@ body {
   text-transform: uppercase;
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
+  height: -webkit-fill-available;
 }
