--- a/src/components/nav/NavMain.css
+++ b/src/components/nav/NavMain.css
@@ -1,93 +1,45 @@
 .nav_main_container {
-  width: 100%;
-  height: 4.75rem;
-  position: absolute;
-  bottom: 0;
-}
-
-.nav_main_container_ul {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 40%;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
 }
 
-.nav_main_container_ul > a {
-  width: calc(100% / 5);
-  height: 100%;
-  color: #000;
+.nav_main_container > a {
+  padding: 0.5rem 1rem;
   text-decoration: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  color: #fff;
   transition: all 0.3s;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   -ms-transition: all 0.3s;
   -o-transition: all 0.3s;
-  filter: drop-shadow(0.3rem 0.2rem 0.3rem #4544447e);
-  -webkit-filter: drop-shadow(0.3rem 0.2rem 0.3rem #4544447e);
 }
 
-.dark_mode_font_color {
-  color: #fff;
-}
-
-.nav_main_link_titles {
-  display: none;
-}
-
-.nav_main_link_icons {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.nav_main_link_icons > img {
-  width: 40%;
-  height: auto;
-  object-fit: contain;
+.nav_main_container > a.active {
+  background-color: red;
 }
 
 @media only screen and (min-width: 768px) {
-  .nav_main_link_icons > img {
-    width: 20%;
-    height: auto;
-    object-fit: contain;
+  .nav_main_container {
+    justify-content: end;
+  }
+
+  .nav_main_container > a {
+    margin-left: 1rem;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .nav_main_container {
-    height: 3.75rem;
-    position: static;
-    /* flex-direction: column; */
+    width: 100%;
   }
+}
 
-  .nav_main_link_titles {
-    display: block;
-  }
-
-  .nav_main_link_icons {
-    display: none;
-  }
-
-  .nav_main_container_ul > a {
-    font-size: 1.25rem;
-    cursor: pointer;
-  }
-
-  .nav_main_container_ul > a:hover {
-    color: #fff;
-    background-color: red;
-    text-shadow: 0.1rem 0.1rem 0.2rem #4f4d4dc7;
-  }
-
-  .nav_main_container_ul > a.active {
-    color: #fff;
-    background-color: red;
+@media only screen and (min-width: 1920px) {
+  .nav_main_container > a {
+    font-size: 1.4rem;
   }
 }
