--- a/src/components/nav/NavMain.css
+++ b/src/components/nav/NavMain.css
@@ -39,6 +39,10 @@
 }
 
 @media only screen and (min-width: 1920px) {
+  .nav_main_container {
+    height: 50%;
+  }
+
   .nav_main_container > a {
     font-size: 1.4rem;
   }
