updated news page

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -8,10 +8,13 @@
   background-color: #0f0f0f;
 }
 
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 1200px) {
   .header_container {
     max-width: 120rem;
     margin: 0 auto;
+    /* position: relative; */
+    position: sticky;
+    top: 0;
   }
 }
 
