--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-tracks: center;
-  background-color: #0f0f0f;
+  background-color: #222121;
 }
 
 @media only screen and (min-width: 1200px) {
