--- a/src/components/screens/Screen.css
+++ b/src/components/screens/Screen.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: calc(100% - 10rem);
   overflow-x: hidden;
-  background-color: #0f0f0f;
+  background-color: #222121;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
   /* border: 1px solid red; */
