--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -8,13 +8,17 @@
   background-color: #222121;
 }
 
+@media only screen and (min-width: 768px) {
+  .header_container {
+    position: sticky;
+    top: 0;
+  }
+}
+
 @media only screen and (min-width: 1200px) {
   .header_container {
     max-width: 120rem;
     margin: 0 auto;
-    /* position: relative; */
-    position: sticky;
-    top: 0;
   }
 }
 
