--- a/src/components/screens/Screen.css
+++ b/src/components/screens/Screen.css
@@ -19,6 +19,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 @media only screen and (min-width: 1200px) {
