--- a/src/components/screens/ScreenScores.css
+++ b/src/components/screens/ScreenScores.css
@@ -1,7 +1,7 @@
 .score_card_container {
   width: 100%;
   height: auto;
-  margin: 2rem auto;
+  margin: 2rem auto 4rem;
   display: flex;
   flex-direction: column;
   justify-content: end;
