--- a/src/components/nav/NavMain.css
+++ b/src/components/nav/NavMain.css
@@ -44,7 +44,7 @@
     height: 7rem;
   }
 
-  .nav_main_container > a {
-    font-size: 1.4rem;
-  }
+  /* .nav_main_container > a {
+    font-size: 1.3rem;
+  } */
 }
