--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,8 +1,14 @@
 .app {
   width: 100vw;
-  height: 100vh;
+  height: auto;
   text-align: center;
   background-color: #000;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.app::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 /* @media only screen and (min-width: 1200px) {
