--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -78,11 +78,13 @@
   }
 }
 
-@media only screen and (min-width: 1920px) {
+@media only screen and (min-width: 1200px) {
   .login_container {
     height: 7rem;
   }
+}
 
+@media only screen and (min-width: 1920px) {
   .account_status_container {
     width: calc(100% - 16rem);
   }
