--- a/src/components/screens/Screen.css
+++ b/src/components/screens/Screen.css
@@ -1,11 +1,10 @@
 .screen_container {
   width: 100%;
-  height: calc(100% - 13rem);
+  min-height: 100vh;
   overflow-x: hidden;
   background-color: #191919;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
-  /* border: 1px solid red; */
 }
 
 .screen_container::-webkit-scrollbar {
